icp-backend/configMaps-secrets-ingress/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicemesh
spec:
  gateways:
  - gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /listingsvc/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: listingsvc.default.svc.cluster.local
  - match:
    - uri:
        prefix: /loginsvc/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: loginsvc.default.svc.cluster.local
  - match:
    - uri:
        prefix: /emailsvc/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: emailsvc.default.svc.cluster.local
  - match:
    - uri:
        prefix: /bookingsvc/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: bookingsvc.default.svc.cluster.local
  - match:
    - uri:
        prefix: /icpairways/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: angular.default.svc.cluster.local
